# PipGarnica

./: CMakeLists.txt
assets/setup/: CardEffectsTable.csv
src/: main.cpp
src/game/: Card.cpp  Card.h  Colors.h  Deck.cpp  Deck.h  Entity.h  PipGarnica.cpp  PipGarnica.h  Player.h
